--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <link rel="stylesheet" href="style.css">
+   <title>Спаси жизнь</title>
 </head>
+
 <body>
-   
+   <div class="container">
+      <header>
+         <ul>
+            <li><a href="#" >Как помочь</a></li>
+            <li><a href="#" >Подопечные животные</a></li>
+            <li><a href="#" >О нас</a></li>
+            <li><a href="#" >Контакты</a></li>
+            <li class="logo_inst"><a href="#" ><img></a></li>
+            <li class="logo_vk"><a href="#" ><img></a></li>
+         </ul>
+         
+         <h1>Спаси жизнь</h1>
+         <h5>Благотворительное общественное объединение защиты животных</h5>
+         <h2 class="semibold">Наша цель: помощь бездомным животным. Мы поддерживаем хвостиков,<br> которые оказались в пункте отлова и временного содержания в Гродно. </h2>
+         <h2 class="normal">У животных, находящихся в пункте отлова и временного содержания бродячих животных, есть всего несколько дней до усыпления...</h2>
+         <div class="button">
+            <p>Действие</p>
+        </div>
+      </header>
+      <main>
+
+      </main>
+      <footer>
+
+      </footer>
+   </div>
 </body>
+
 </html>
