--- a/index.html
+++ b/index.html
@@ -29,7 +29,49 @@
         </div>
       </header>
       <main>
-
+         <div class="screen_2">
+            <div class="screen_2_img"></div>
+             <div class="text_screen_2">
+               <h2>Тут большие добрые сердца помогают жить маленьким сердечкам</h2>
+               <p class="p_first">Ежедневно в пункт временного содержания, путём отлова, попадают безнадзорные собаки и коты. По закону, у животных находящихся в САХе есть всего лишь несколько дней, чтобы найти прежнего или обрести нового хозяина. В противном случае невостребованных животных ждёт УСЫПЛЕНИЕ! Здесь вы сможете найти своего как потерявшегося, так и нового верного друга! 
+               </p>
+               <p class="p_second">Если нет возможности забрать хвостика, вы можете помочь нам финансово или другой материальной помощью. Еще нам всегда нужны добрые и отзывчивые люди - волонтеры, без вас очень трудно!</p>
+            </div>
+         </div>
+         <div class="screen_3">
+            <h5>Как помочь?</h5>
+            <div class="help">
+               <img src="/img/Ellipse.jpg" alt="1">
+               <img src="/img/Ellipse.jpg" alt="2">
+               <img src="/img/Ellipse.jpg" alt="3">
+               <img src="/img/Ellipse.jpg" alt="4">
+               <img src="/img/Ellipse.jpg" alt="5">
+            </div>
+            <div class="text_help">
+               <p>Дать хвостику дом или взять на передержку</p>
+               <p>Перечислить деньги в фонд помощи</p>
+               <p>Привезти корм, лекарства или другие вещи</p>
+               <p>Доставить животным еду или отвезти в больницу</p>
+               <p>Выгуливать, кормить, мыть или лечить хвостиков</p>
+            </div>
+            <div class="line_home">
+               <span><img src="/img/Ellipse.jpg" alt="1"></span>
+            </div>
+            <div class="text_end">
+               <div class="text_end_1">
+                  <h3>Дом и любовь для хвостика</h3>
+                  <p>Самая большая помощь - это спасти жизнь животному, забрать домой, или помочь хвостику с поиском дома. У наших подопечных очень мало времени. Рассказывайте друзья и и знакомым о наших хвостиках, возможно кому-то нужен будет именно такой друг.</p>
+               </div>
+               <div class="text_end_2">
+                  <h3>Передержка</h3>
+                  <p>Когда животных ждет скорое усыпление, очень важно найти ему дом. Но пока дом и новые или старые хозяева разыскиваются, хвостику нужно где-то жить. Вы можете забрать к себе домой животных на время. Волонтеры, в свою очередь, обязательно помогут с поиском нового дома.
+                  </p>
+               </div>
+            </div>
+         </div>
+         <div class="screen_4">
+            
+         </div>
       </main>
       <footer>
 
