--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <li><a href="#" >Подопечные животные</a></li>
             <li><a href="#" >О нас</a></li>
             <li><a href="#" >Контакты</a></li>
-            <li class="logo_inst"><a href="#" ><img></a></li>
-            <li class="logo_vk"><a href="#" ><img></a></li>
+            <li class="logo_inst"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="inst"></a></li>
+            <li class="logo_vk"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="vk"></a></li>
          </ul>
          
          <h1>Спаси жизнь</h1>
          <h5>Благотворительное общественное объединение защиты животных</h5>
          <h2 class="semibold">Наша цель: помощь бездомным животным. Мы поддерживаем хвостиков,<br> которые оказались в пункте отлова и временного содержания в Гродно. </h2>
          <h2 class="normal">У животных, находящихся в пункте отлова и временного содержания бродячих животных, есть всего несколько дней до усыпления...</h2>
-         <div class="button">
+         <button class="button_blue">
             <p>Действие</p>
-        </div>
+         </button>
       </header>
       <main>
          <div class="screen_2">
-            <div class="screen_2_img"></div>
+            <img src="/img/Rectangle.jpg" alt="1">
              <div class="text_screen_2">
                <h2>Тут большие добрые сердца помогают жить маленьким сердечкам</h2>
                <p class="p_first">Ежедневно в пункт временного содержания, путём отлова, попадают безнадзорные собаки и коты. По закону, у животных находящихся в САХе есть всего лишь несколько дней, чтобы найти прежнего или обрести нового хозяина. В противном случае невостребованных животных ждёт УСЫПЛЕНИЕ! Здесь вы сможете найти своего как потерявшегося, так и нового верного друга! 
@@ -70,7 +70,44 @@
             </div>
          </div>
          <div class="screen_4">
-            
+            <h3>Наши подопечные</h3>
+            <a class ="all" href="#">Посмотреть всех (157)</a>
+         <div class="animals">
+               <figure>
+                  <img src="/img/Rectangle.jpg" alt="1">
+                  <figcaption><h4>Имя</h4>
+                  <p>Описание <br>
+                     Сколько в САХЕ, на передержке</p>
+                  </figcaption>
+               </figure>
+               <figure>
+                  <img src="/img/Rectangle.jpg" alt="2">
+                  <figcaption><h4>Имя</h4>
+                  <p>Описание <br>
+                     Сколько в САХЕ, на передержке</p>
+                  </figcaption>
+               </figure>
+               <figure>
+                  <img src="/img/Rectangle.jpg" alt="3">
+                  <figcaption><h4>Имя</h4>
+                  <p>Описание <br>
+                     Сколько в САХЕ, на передержке</p>
+                  </figcaption>
+               </figure>
+         </div>
+            <div class="navigation">
+               <a class="arrow_left"><img src="/img/Vector.jpg" alt=""></a>
+               <button class="button_blue"><p>Забрать домой</p></button>
+               <a class="arrow_right"><img src="/img/Vector.jpg" alt=""></a>
+            </div>
+            <button class="button_white"><p>Забрать на передержку</p></button>
+            <div class="text_screen_4">
+               <p>Помочь быстрее пристроить хвостиков можно путем размещения наших постов у себя в соц сетях. Переходите на наши странички.</p>
+               <ul>
+                  <li class="logo_inst"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="inst"></a></li>
+                  <li class="logo_vk"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="vk"></a></li>
+               </ul>
+            </div>
          </div>
       </main>
       <footer>
