--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
          <h5>Благотворительное общественное объединение защиты животных</h5>
          <h2 class="semibold">Наша цель: помощь бездомным животным. Мы поддерживаем хвостиков,<br> которые оказались в пункте отлова и временного содержания в Гродно. </h2>
          <h2 class="normal">У животных, находящихся в пункте отлова и временного содержания бродячих животных, есть всего несколько дней до усыпления...</h2>
-         <button class="button_blue">
-            <p>Действие</p>
-         </button>
+         <button class="button_blue"> Действие</button>
       </header>
       <main>
          <div class="screen_2">
@@ -97,16 +95,52 @@
          </div>
             <div class="navigation">
                <a class="arrow_left"><img src="/img/Vector.jpg" alt=""></a>
-               <button class="button_blue"><p>Забрать домой</p></button>
+               <button class="button_blue">Забрать домой</button>
                <a class="arrow_right"><img src="/img/Vector.jpg" alt=""></a>
             </div>
-            <button class="button_white"><p>Забрать на передержку</p></button>
+            <button class="button_white">Забрать на передержку</button>
             <div class="text_screen_4">
                <p>Помочь быстрее пристроить хвостиков можно путем размещения наших постов у себя в соц сетях. Переходите на наши странички.</p>
                <ul>
                   <li class="logo_inst"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="inst"></a></li>
                   <li class="logo_vk"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="vk"></a></li>
                </ul>
+            </div>
+         </div>
+         <div class="screen_5">
+            <div class="line_home">
+               <span><img src="/img/Ellipse.jpg" alt="1"></span>
+            </div>
+            <div class="financial_support"> <h3>Финансовая поддержка</h3>
+            <p> Такая помощь необходима для оплаты стерилизации, прививок, лечения больных животных, покупка корма и других жизненно необходимых вещей.</p>
+         </div>
+           
+            <div class="payment">
+               <div class="bank">
+                  <h3>Расчетный счет в Банке</h3>
+                  <p>БООЗЖ "СПАСИ ЖИЗНЬ"<br>
+                     УНП: 590375680<br>
+                     <b>Текущий (расчетный) счет в BYN: </b><br>
+                     BY13ALFA30152555460010270000 <br>
+                     ЗАО 'Альфа-Банк'<br>
+                     БИК: ALFABY2X
+                     </p>
+                  <button class="button_blue">
+                     Быстрый платеж
+                  </button>
+               </div>
+               <div class="city">
+                  <h3>Коробочки в городе</h3>
+                  <p>Наши коробочки для пожертвований в г. Гродно:<br>
+                     1. Зоомаркет «Зообазар», ул. Комарова, 26а;<br>
+                     2. Учебный корпус ГГАУ,  ул. Волковича, 1;<br>
+                     3. Парикмахерская «ПРИМАДОННА», ул. Гоголя, 11;<br>
+                     4. Зоомаркет «Зообазар» ул. Пушкина, 31а;<br>
+                     5. Гипермаркет «Евроопт», ул. Тимирязева, 8;<br>
+                     6. Гипермаркет «Евроопт», ул. Янки Купалы, 82А;<br>
+                     7. Фитнес-центр «АДРЕНАЛИН», ул. Подольная, д.37.</p>
+                  <a class ="all" href="#">Посмотреть на карте</a>
+               </div>
             </div>
          </div>
       </main>
