--- a/index.html
+++ b/index.html
@@ -143,6 +143,57 @@
                </div>
             </div>
          </div>
+         <div class="screen_6">
+            <div class="line_home">
+               <span><img src="/img/Ellipse.jpg" alt="1"></span>
+            </div> 
+            <div class="feed"> 
+            <h3>
+               Корма
+            </h3>
+            <p>
+               Можно помочь с покупкой и доставкой еды для хвостатых:<br>
+               • Быстроразваривающиеся <b>крупы</b>: дроблёная гречка, овсянка, сечка, овсяные/гречневые хлопья, не требующие варки;<br>
+               • <b>Сухие и влажные корма</b> для собак и котов (кроме Рекс и Petboom),<br>
+               • <b>Фарш для собак</b>, "БОБИКИ" и др.<br>
+               Вы можете помочь в приготовлении каш и их доставке!
+            </p>
+            </div> 
+           <div class="medicine"> <h3>
+               Лекарства
+            </h3>
+            <p>
+               Нам необходимы препараты: <b>цефтриаксон</b> (флакон по 0,5 г); <b>новокаин</b> (раствор для инъекций); <b>гискан; гамавит; катозал; антитокс фоспренил; энтеросгель</b> (паста); <b>препараты от глистов, блох, клещей, для заживления ран</b>.
+            </p></div>
+           <div class="other_things"><h3>
+               Другие нужные вещи
+            </h3>
+            <p>
+               Для содержания животных всегда необходимы:<br>
+               • Ошейники, поводки, намордники;<br>
+               • Опилки и солома в любом количестве;<br>
+
+               • Посуда для животных и для приготовления еды - миски, кастрюли, ножи, черпаки и др.;<br>
+               • Теплые вещи, лежаки для утепления и уюта животных;<br>
+               • Будки.
+            </p></div>
+            <div style="margin-bottom: 34px;"><a class ="all" href="#">Кому и куда передать</a></div>
+            <div class="line_home">
+               <span><img src="/img/Ellipse.jpg" alt="1"></span>
+            </div> 
+            <div class="car_help">
+                <h3>Автопомощь</h3>
+                <p>Важной помощью будет транспортировка. Необходимо отвозить животных в ветеринарную клинику в сопровождении нашего волонтера или привозить еду. Если у вас есть автомобиль, немного свободного времени и доброе сердце - будем вам рады.</p>
+            </div>
+            <button class="button_blue">
+               Оставить заявку
+            </button>
+            <div class="line_home">
+               <span><img src="/img/Ellipse.jpg" alt="1"></span>
+            </div> 
+         </div>
+         
+            
       </main>
       <footer>
 
