--- a/index.html
+++ b/index.html
@@ -218,7 +218,23 @@
             <div style="margin-top: 24px;"><a class ="all" href="#">Показать все новости</a></div>
             
          </div>
-            
+         <div class="screen_8">
+            <h3>О нас</h3>
+            <p class="GilroyMedium">Мы - благотворительное общественное объединение защиты животных «СПАСИ ЖИЗНЬ». Цель нашей деятельности: помощь бездомным животным, оказавшимся в Пункте отлова и временного содержания безнадзорных животных г.Гродно.</p>
+            <h6>Контакты</h6>
+            <p>Если Вы хотите приютить одного из этих четвероногих или оказать какую-либо помощь, звоните волонтёрам:<br>
+               +375 (33) 6237879, Лена <br>
+               +375 (29) 7877791, Ольга<br>
+               +375 (29) 5837015, Рита
+               </p>
+            <h6>Адрес САХа</h6>   
+            <p>РБ, г. Гродно, ул.Дзержинского, д.104</p>
+            <p class="gray">Связаться с нами можно написав в соц. сетях.</p>
+          <ul>
+            <li class="logo_vk"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="vk"></a></li>
+            <li class="logo_inst"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="inst"></a></li>
+          </ul>  
+         </div>   
       </main>
       <footer>
 
