screen 9 and footer

--- a/index.html
+++ b/index.html
@@ -234,10 +234,25 @@
             <li class="logo_vk"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="vk"></a></li>
             <li class="logo_inst"><a href="#" ><img src="/img/Rectangle 46.jpg" alt="inst"></a></li>
           </ul>  
+         </div>
+         <div class="screen_9">
+         <p>Спасибо
+            за помощь</p>
          </div>   
       </main>
       <footer>
-
+         <ul>
+            <li><a href="#">Дом или передержка</a></li>
+            <li><a href="#">Финансовая поддержка</a></li>
+            <li><a href="#">Корма, лекарства и другие вещи</a></li>
+            <li><a href="#">Автопомощь</a></li>
+            <li><a href="#">Волонтерство</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Контакты</a></li>
+         </ul>
+         <p class="copyrigh">
+            © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"
+         </p>
       </footer>
    </div>
 </body>
