add link and navigation

--- a/index_new.html
+++ b/index_new.html
@@ -19,14 +19,14 @@
      <header>
       <nav class="navigation"> 
          <div class="menu">
-          <a href="#" class="gray_2">Как помочь</a>
-          <a href="#" class="gray_2">Подопечные животные</a>
-          <a href="#" class="gray_2">О нас</a>
-          <a href="#" class="gray_2">Контакты</a>
+          <a href="#help" class="gray_2">Как помочь</a>
+          <a href="#animal" class="gray_2">Подопечные животные</a>
+          <a href="#about_u" class="gray_2">О нас</a>
+          <a href="#contact" class="gray_2">Контакты</a>
           </div>
          <div class="logo">
-           <a href="#"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
-         <a href="#"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
+           <a href=" https://vk.com/animalsgrodno" target="_blank"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
+         <a href="https://www.instagram.com/animalsgrodno/" target="_blank"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
          </div>
          
       </nav>
@@ -44,8 +44,8 @@
       <section class="screen_2 white">
          <div class="navigation">
             <div>
-               <img src="/img/screen_2.png" alt="фото кота и собаки">
-            </div>
+               <img src="/img/screen_2.png" alt="собака">
+        </div>
             <div class="text_screen_2">
                <h3 class="semibold ">
                   Тут большие добрые сердца помогают жить маленьким сердечкам
@@ -59,33 +59,41 @@
             </div>
          </div>
       </section>
-      <section class="screen_3">
+      <section class="screen_3" id="help">
          <h3 class="light gray_2">
             Как помочь?
          </h3>
          <div class="navigation">
          <div class="help">
-            <img src="/img/screen_3_1.png" alt="Дом">
-           <p class="text_md_medium gray_3">Дать хвостику дом или взять на передержку</p> 
+            <button><a href="#home"><img src="/img/screen_3_1.png" alt="Дом"></a></button>
+            <p class="text_md_medium gray_3">Дать хвостику дом или взять на передержку</p> 
          </div>   
          <div class="help"> 
-             <img src="/img/screen_3_2.png" alt="Деньги"> 
+            <button><a href="#Fin_help">
+              <img src="/img/screen_3_2.png" alt="Деньги"></a>  
+            </button>
              <p class="text_md_medium gray_3">Перечислить деньги в фонд помощи</p>
          </div>   
          <div class="help"> 
-             <img src="/img/screen_3_3.png" alt="Корм">
+            <button><a href="#feed">
+               <img src="/img/screen_3_3.png" alt="Корм"></a>  
+             </button>
              <p class="text_md_medium gray_3">Привезти корм, лекарства или другие вещи</p>
          </div>
          <div class="help">  
-             <img src="/img/screen_3_4.png" alt="Больница">
+            <button><a href="#car_help">
+               <img src="/img/screen_3_4.png" alt="Больница"></a>  
+             </button>
              <p class="text_md_medium gray_3">Доставить животным еду или отвезти в больницу</p>
          </div>
          <div class="help"> 
-             <img src="/img/screen_3_5.png" alt="Помощь">
+            <button><a href="#volunteering"></a>
+               <img src="/img/screen_3_5.png" alt="Помощь">  
+             </button>
             <p class="text_md_medium gray_3">Выгуливать, кормить, мыть или лечить хвостиков</p> 
          </div>
          </div>
-         <div class="line_home">
+         <div class="line_home" id="home"> 
             <span><img src="/img/line_home_1.png" alt="сердце"></span>
          </div>
          <div class="navigation">
@@ -100,9 +108,9 @@
             </div>
          </div>
       </section>
-      <section class="screen_4">
+      <section class="screen_4" id="animal">
          <h3 class="light gray_2">Наши подопечные</h3>
-         <a class ="all dirty_yellow step" href="#">Посмотреть всех (157)</a> <img src="/img/icon.png" alt="стрелочка">
+         <a class ="all dirty_yellow step" href="/animals.html">Посмотреть всех (157)</a> <img src="/img/icon.png" alt="стрелочка">
          <article class="navigation">
             <figure>
                <img src="/img/блэки.png" alt="Блэки">
@@ -147,12 +155,12 @@
       <div class="navigation">
       <p class="text">Помочь быстрее пристроить хвостиков можно путем размещения наших постов у себя в соц сетях. Переходите на наши странички.</p>
       <div class="logo">
-         <a href="#"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
-       <a href="#"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
+         <a href=" https://vk.com/animalsgrodno#" target="_blank"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
+       <a href="https://www.instagram.com/animalsgrodno/" target="_blank"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
        </div>
       </div>
       </section>
-      <section class="screen_5 white">
+      <section class="screen_5 white" id="fin_help">
          <div class="line_home">
             <span><img src="/img/финансовая поддержка.png" alt="поддержка"></span>
          </div>
@@ -169,7 +177,7 @@
                      БИК: ALFABY2X
                      </p>
                      <div class="button_yellow_2"> 
-                        <button class="button_yellow">Быстрый платеж</button>
+                        <button class="button_yellow"><a href="https://express-pay.by/">Быстрый платеж</a></button>
                      </div> 
             </div>
             <div>
@@ -186,7 +194,7 @@
             </div>
          </div>
       </section>
-      <section class="screen_6">
+      <section class="screen_6" id="feed">
          <div class="line_home">
             <span><img src="/img/корма.png" alt="корма"></span>
          </div>
@@ -221,17 +229,17 @@
             </p>
             <a class ="all dirty_yellow" href="#">Кому и куда передать</a>
          </div>
-         <div class="line_home">
+         <div class="line_home" id="car_help">
             <span><img src="/img/автопомощь.png" alt="автопомощь"></span>
          </div>
             <div class="need">
-               <h3 class="medium_28 gray_2">Автопомощь</h3>
+               <h3 class="medium_28 gray_2" >Автопомощь</h3>
                 <p class="gray_2">Важной помощью будет транспортировка. Необходимо отвозить животных в ветеринарную клинику в сопровождении нашего волонтера или привозить еду. Если у вас есть автомобиль, немного свободного времени и доброе сердце - будем вам рады.</p>
                 <div class="button_yellow_2"> 
                   <button class="button_yellow">Оставить заявку</button>
                </div> 
             </div>
-         <div class="line_home">
+         <div class="line_home" id="volunteering">
             <span><img src="/img/волонтерство_линия.png" alt="волонтерство"></span>
          </div>
          <div class="navigation">
@@ -263,12 +271,12 @@
          </article>
          <a class ="all dirty_yellow" href="#">Показать все новости</a>
       </section>
-      <section class="screen_8">
+      <section class="screen_8" id="about_u">
          <h3 class="medium_28 gray_2">О нас</h3>
          <p class="text_l_medium gray_2">
             Мы - благотворительное общественное объединение защиты животных «СПАСИ ЖИЗНЬ». Цель нашей деятельности: помощь бездомным животным, оказавшимся в Пункте отлова и временного содержания безнадзорных животных г.Гродно.
          </p>
-         <h4 class="gray_2">Контакты</h4>
+         <h4 class="gray_2" id="contact">Контакты</h4>
          <p class="gray_2">Если Вы хотите приютить одного из этих четвероногих или оказать какую-либо помощь, звоните волонтёрам:<br>
             +375 (33) 6237879, Лена <br>
             +375 (29) 7877791, Ольга<br>
@@ -278,21 +286,28 @@
          Связаться с нами можно написав в соц. сетях.
         </p> 
         <div class="logo">
-         <a href="#"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
-       <a href="#"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
+         <a href=" https://vk.com/animalsgrodno" target="_blank"><img src="/img/vk_logo_simple.png" alt="logo vk" ></a> 
+       <a href="https://www.instagram.com/animalsgrodno/" target="_blank"><img src="/img/inst_logo_simple.png" alt="logo inst"></a> 
        </div>   
       </section>
-      <section class="screen_9"></section>
+      <section class="screen_9">
+         <p class="">Спасибо
+            за помощь</p>
+            <img src="/img/лапка.png" alt="лапка">
+          <div class="rectangle">
+             <div class="circle"></div>
+          </div>  
+      </section>
    </main>
    <footer>
       <nav>
-         <a href="#">Дом или передержка</a>
-         <a href="#">Финансовая поддержка</a>
-         <a href="#">Корма, лекарства и другие вещи</a>
-         <a href="#">Автопомощь</a>
-         <a href="#">Волонтерство</a>
-         <a href="#">О нас</a>
-         <a href="#">Контакты</a>
+         <a href="#home">Дом или передержка</a>
+         <a href="#Fin_help">Финансовая поддержка</a>
+         <a href="#feed">Корма, лекарства и другие вещи</a>
+         <a href="#car_help">Автопомощь</a>
+         <a href="#volunteering">Волонтерство</a>
+         <a href="#about_u">О нас</a>
+         <a href="#contact">Контакты</a>
       </nav>
       <p class="gray_6"> © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"</p>
    </footer> 
