add link and new page animals

--- a/animals.html
+++ b/animals.html
@@ -3,9 +3,40 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="fonts.css">
+   <link rel="stylesheet" href="style_new.css">
+   <link rel="stylesheet" href="style_animals.css">
    <title>Document</title>
 </head>
 <body>
-   
+   <div class="container">
+   <header>
+      <div class="navigation">
+         <div class="button-yellow">
+            <a href="index_new.html"><img src="/img/Vector.png" alt="стрелочка"></a>
+          </div>
+           <a href="index_new.html" class="gray_4">Вернуться назад</a>
+          <h3 class="semibold gray_2">Наши подопечные</h3>
+          <p class="gray_4 text">Показать</p>
+          <select>
+            <option class="text_sm_medium gray_2">Коты и собаки</option>
+            <option class="text_sm_medium gray_2">Только коты</option>
+            <option class="text_sm_medium gray_2">Только собаки</option>
+          </select>
+      </div>
+   </header>
+   <main></main>
+   <footer> <nav>
+      <a href="#home">Дом или передержка</a>
+      <a href="#Fin_help">Финансовая поддержка</a>
+      <a href="#feed">Корма, лекарства и другие вещи</a>
+      <a href="#car_help">Автопомощь</a>
+      <a href="#volunteering">Волонтерство</a>
+      <a href="#about_u">О нас</a>
+      <a href="#contact">Контакты</a>
+   </nav>
+   <p class="gray_6"> © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"</p>
+</footer>
+</div>
 </body>
 </html>
