--- a/animals.html
+++ b/animals.html
@@ -1,42 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="fonts.css">
-   <link rel="stylesheet" href="style_new.css">
    <link rel="stylesheet" href="style_animals.css">
    <title>Document</title>
 </head>
+
 <body>
    <div class="container">
-   <header>
-      <div class="navigation">
-         <div class="button-yellow">
-            <a href="index_new.html"><img src="/img/Vector.png" alt="стрелочка"></a>
-          </div>
-           <a href="index_new.html" class="gray_4">Вернуться назад</a>
-          <h3 class="semibold gray_2">Наши подопечные</h3>
-          <p class="gray_4 text">Показать</p>
-          <select>
-            <option class="text_sm_medium gray_2">Коты и собаки</option>
-            <option class="text_sm_medium gray_2">Только коты</option>
-            <option class="text_sm_medium gray_2">Только собаки</option>
-          </select>
-      </div>
-   </header>
-   <main></main>
-   <footer> <nav>
-      <a href="#home">Дом или передержка</a>
-      <a href="#Fin_help">Финансовая поддержка</a>
-      <a href="#feed">Корма, лекарства и другие вещи</a>
-      <a href="#car_help">Автопомощь</a>
-      <a href="#volunteering">Волонтерство</a>
-      <a href="#about_u">О нас</a>
-      <a href="#contact">Контакты</a>
-   </nav>
-   <p class="gray_6"> © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"</p>
-</footer>
-</div>
+      <header>
+         <div class="navigation">
+            <div class="button-yellow">
+               <a href="index_new.html"><img src="/img/Vector.png" alt="стрелочка"></a>
+            </div>
+            <a href="index_new.html" class="gray_4">Вернуться назад</a>
+            <h3 class="semibold gray_2">Наши подопечные</h3>
+            <p class="gray_4 text">Показать</p>
+            <select>
+               <option class="text_sm_medium gray_2">Коты и собаки</option>
+               <option class="text_sm_medium gray_2">Только коты</option>
+               <option class="text_sm_medium gray_2">Только собаки</option>
+            </select>
+         </div>
+      </header>
+      <main>
+         <article class="grid">
+            <figure>
+               <img src="/img/animals/Моник.png" alt="Моник">
+               <figcaption>
+                  <h4 class="medium gray_2">Моник</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">К поводку приучен. Не агрессивный. В еде не привередничает. С другими животными не конфликтует. Привит.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Лунатик.png" alt="Лунатик">
+               <figcaption>
+                  <h4 class="medium gray_2">Лунатик</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">Малыш хочет домой и часто плачет.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Герда.png" alt="Герда">
+               <figcaption>
+                  <h4 class="medium gray_2">Герда</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text" >ОВеселый и очень игривый, ему так нужны ваша любовь и ласка.У него потрясающая густая шерсть в полосочку.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Саки.png" alt="Саки">
+               <figcaption>
+                  <h4 class="medium gray_2">Саки</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">Серьезный кот в серьезные руки. Будет преданным только одному хозяину.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Моник-собака.png" alt="Моник">
+               <figcaption>
+                  <h4 class="medium gray_2">Моник</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">К поводку приучен. Не агрессивный. В еде не привередничает. С другими животными не конфликтует. Привит.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Андреантино.png" alt="Андреантино">
+               <figcaption>
+                  <h4 class="medium gray_2">Андреантино</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 7 месяцев</p>
+                  <p class="text_sm_medium gray_2 text">Супер дружелюбный пес. Спешите, таких больше не найдете.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Пупсик.png" alt="Пупсик">
+               <figcaption>
+                  <h4 class="medium gray_2">Пупсик</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 3 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">Милый песик. Очень игривый. Черная шубка светится на солнце и переливается синим.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Мишка.png" alt="Мишка">
+               <figcaption>
+                  <h4 class="medium gray_2">Мишка</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4"> Мальчик, 2 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">Малыш хочет домой и часто плачет.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Красавчик.png" alt="Красавчик">
+               <figcaption>
+                  <h4 class="medium gray_2">Красавчик</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Мальчик, 7 месяцев  </p>
+                  <p class="text_sm_medium gray_2 text">Мудрый кот. Аккуратный и нежный. Не царапает вещи и мебель. Кушает все!</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Бобик.png" alt="Бобик">
+               <figcaption>
+                  <h4 class="medium gray_2">Бобик</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4">Девочка, 2 года</p>
+                  <p class="text_sm_medium gray_2 text">Девочка-красотка будет надежным защитником и другом хорошему человеку.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+            <figure>
+               <img src="/img/animals/Милаха.png" alt="Милаха">
+               <figcaption>
+                  <h4 class="medium gray_2">Милаха</h4>
+                  <hr>
+                  <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
+                  <p class="text_sm_medium gray_2 text">Мальчиш-крепыш. Здоров, привит и кастрирован.</p>
+                  <a class="all dirty_yellow" href="#">Подробнее</a>
+               </figcaption>
+            </figure>
+         </article>
+      </main>
+      <footer>
+         <nav>
+            <a href="#home">Дом или передержка</a>
+            <a href="#Fin_help">Финансовая поддержка</a>
+            <a href="#feed">Корма, лекарства и другие вещи</a>
+            <a href="#car_help">Автопомощь</a>
+            <a href="#volunteering">Волонтерство</a>
+            <a href="#about_u">О нас</a>
+            <a href="#contact">Контакты</a>
+         </nav>
+         <p class="gray_6"> © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"</p>
+      </footer>
+   </div>
 </body>
+
 </html>
